优化datax使用job创建
Co-authored-by: hhhhsc<1710496817@qq.com>