@@ -4,7 +4,9 @@ import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 
 import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 
 /**
  * 数据源和目标类型枚举
@@ -14,7 +16,7 @@ import java.util.List;
 public enum SrcAndDesTypeEnum {
     LOCAL("local", "local"),  // 本地导入
     DATABASE("database", "database"),   // 数据库导入
-    NFS("nfs", "nas"),    // NAS导入
+    NFS("nfs", "nfs"),    // NAS导入
     S3("s3", "obs"), // OBS导入
     LOCAL_COLLECTION("local_collection", "local_collection"); // 本地采集
 
@@ -25,8 +27,8 @@ public enum SrcAndDesTypeEnum {
     /**
      * 获取名称
      */
-    public static List<String> getRemoteSource() {
-        return Arrays.asList(NFS.getName(), S3.getName(), DATABASE.getName());
+    public static Set<String> getRemoteSource() {
+        return new HashSet<>(List.of(NFS.getName(), S3.getName(), DATABASE.getName()));
     }
 
     /**
